HLM-5547: updated pom.xml, added maven surefire plugin